--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -5,17 +5,17 @@
         @include background-div("../images/backgorund3.png");
         display: flex;
         align-items: center;
-        height: clamp(250px, 20vh, 500px);        
+        height: clamp(250px, 20vh, 500px);                
     }
     &__article-title{
         backdrop-filter: blur(3px);
         border-radius: 0px 20px 20px 0px;        
         color: white;
         background-color: rgba($color: #000000, $alpha: 0.20);
-        padding-left: 10px;
         text-align: start;
         width: clamp(230px, 75%,300px);
         font-size: 2rem;
+        margin-left: 10px;
     }
     &__picture-div{
         display: none;
@@ -33,10 +33,15 @@
             justify-content: space-evenly;
         }
 
+        &__article-title{
+            margin: 0;
+        }
+
         &__picture-div{
             display: block;
-            width: clamp(100px, 90%, 240px);
-            height: clamp(100px, 90%, 290px);
+            width: clamp(100px, 100%, 290px);
+            height: clamp(100px, 100%, 290px);
+            padding: 10px;
         }
         &__clipboard{
             border-radius: 20px;            
@@ -53,15 +58,10 @@
 
         &__article-title{
             font-size: 3rem;
+            height: 250px;
             width: clamp(230px, 75%,400px);
             border-radius: 0 40px 40px 0;
-        }
-
-        &__picture-div{
-            display: block;
-            width: clamp(100px, 90%, 400px);
-            height: clamp(100px, 90%, 400px);
-        }
+        }      
         &__clipboard{
             border-radius: 20px;            
         }
